--- a/scss/main.scss
+++ b/scss/main.scss
@@ -8,7 +8,7 @@ body {
 }
 
 main {
-    padding: 1rem;
+    padding: .75rem;
     background-color: colors.$white;
 }
 
@@ -53,9 +53,17 @@ main {
 
     .notification {
         display: grid;
-        grid-template-columns: 39px auto auto;
+        grid-template-columns: 39px auto ;
         column-gap: 1rem;
         padding: 1rem;
+
+    }
+    
+    .smith {
+        grid-template-columns: 39px auto auto;
+        .kim {
+            margin: auto 0;
+        }
     }
 
     .name {
@@ -112,7 +120,7 @@ main {
     }
 
     main {
-        padding: 2rem;
+        padding: 1.5rem;
         border-radius: 10px;
     }
 
@@ -139,12 +147,23 @@ main {
     .notifications {
         font-size: 1rem;
 
-        .notification {
-            grid-template-columns: 45px auto auto !important;
+        img {
+            width: 45px;
+            height: 45px;
+        }
 
+        .notification {
+            grid-template-columns: 45px auto !important;
             img.kim {
                 margin-left: auto;
             }
+            .kim:hover {
+                cursor: pointer;
+            }
+        }
+
+        .smith {
+            grid-template-columns: 45px auto auto !important;
         }
 
         .name:hover, 
